// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders properly with credit card 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTNavigator
    onNavigationComplete={[Function]}
    requestedTopOfStack={0}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTNavItem
      initialRoute={
        Object {
          "component": [Function],
          "passProps": Object {
            "me": Object {
              "has_credit_cards": true,
            },
            "sale": Object {
              "__id": "U2FsZTpkYXZpZC1seW5jaC1mb3VuZGF0aW9uLWJlbmVmaXQtYXVjdGlvbi0yMDE4",
              "end_at": "2018-06-26T19:30:00+00:00",
              "id": "david-lynch-foundation-benefit-auction-2018",
              "is_preview": false,
              "live_start_at": null,
              "name": "David Lynch Foundation: Benefit Auction 2018",
              "start_at": "2018-06-12T08:10:00+00:00",
            },
          },
          "title": "",
        }
      }
      navigationBarHidden={true}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
          undefined,
        ]
      }
      title=""
      translucent={true}
    >
      <View
        className="css-6fsl11-Container"
        style={
          Array [
            Object {},
          ]
        }
      >
        <View>
          <View
            className="css-zcxndt"
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              className="css-6bw7z5-Title sc-bwzfXH uTxCW"
              fontFamily="AGaramondPro-Semibold"
              fontSize="22px"
              lineHeight="28px"
              style={
                Array [
                  Object {
                    "fontFamily": "AGaramondPro-Semibold",
                    "fontSize": 22,
                    "lineHeight": 28,
                  },
                ]
              }
            >
              Register to bid
            </Text>
            <View
              className="css-1q6ogye-Countdown"
              style={
                Array [
                  Object {
                    "display": "flex",
                  },
                ]
              }
            >
              <Text
                className="sc-bdVaJa bDWFJH"
                fontFamily="Unica77LL-Medium"
                fontSize="16px"
                lineHeight="22px"
                style={
                  Array [
                    Object {
                      "fontFamily": "Unica77LL-Medium",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                  ]
                }
              >
                15d  23h  07m  27s
              </Text>
              <Text
                className="sc-bdVaJa bDWFJH"
                fontFamily="Unica77LL-Medium"
                fontSize="12px"
                lineHeight="16px"
                style={
                  Array [
                    Object {
                      "fontFamily": "Unica77LL-Medium",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Ends Jun 26, 3:30 PM
              </Text>
            </View>
            <Text
              className="css-11fydvi sc-bwzfXH uTxCW"
              fontFamily="AGaramondPro-Semibold"
              fontSize="18px"
              lineHeight="22px"
              style={
                Array [
                  Object {
                    "fontFamily": "AGaramondPro-Semibold",
                    "fontSize": 18,
                    "lineHeight": 22,
                  },
                ]
              }
            >
              David Lynch Foundation: Benefit Auction 2018
            </Text>
          </View>
          <View
            style={
              Object {
                "marginTop": 22,
              }
            }
          >
            <Modal
              animationType="fade"
              hardwareAccelerated={false}
              transparent={true}
              visible={false}
            >
              <View
                accessible={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#00000099",
                      "flexBasis": 0,
                      "flexDirection": "column",
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  accessible={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "white",
                        "borderRadius": 2,
                        "opacity": 1,
                        "paddingBottom": 20,
                        "paddingLeft": 20,
                        "paddingRight": 20,
                        "paddingTop": 20,
                        "width": 300,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      className="sc-bdVaJa bDWFJH"
                      fontFamily="Unica77LL-Medium"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "fontFamily": "Unica77LL-Medium",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      An error occurred
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "paddingBottom": 30,
                      }
                    }
                  >
                    <Text
                      className="css-1e758l9 sc-bdVaJa bDWFJH"
                      fontFamily="Unica77LL-Regular"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "fontFamily": "Unica77LL-Regular",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                  <View
                    accessible={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(255, 255, 255, 1)",
                        "borderColor": "rgba(229, 229, 229, 1)",
                        "borderRadius": 2,
                        "borderWidth": 2,
                        "height": 40,
                        "justifyContent": "center",
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      className="css-1xu3tth sc-bdVaJa bDWFJH"
                      fontFamily="Unica77LL-Medium"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "fontFamily": "Unica77LL-Medium",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      Ok
                    </Text>
                  </View>
                </View>
              </View>
            </Modal>
          </View>
        </View>
        <View>
          <View
            accessible={true}
            className="css-t14co2"
            onPress={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {},
              ]
            }
          >
            <View
              animate={
                Array [
                  "backgroundColor",
                  "borderColor",
                ]
              }
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255, 255, 255, 1)",
                  "borderColor": "rgba(229, 229, 229, 1)",
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "display": "flex",
                  "height": 20,
                  "justifyContent": "center",
                  "marginRight": 10,
                  "width": 20,
                }
              }
            />
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                className="css-ioktyf sc-bwzfXH uTxCW"
                fontFamily="AGaramondPro-Regular"
                fontSize="14px"
                lineHeight="18px"
                style={
                  Array [
                    Object {
                      "fontFamily": "AGaramondPro-Regular",
                      "fontSize": 14,
                      "lineHeight": 18,
                    },
                  ]
                }
              >
                Agree to
                 
                <Text
                  onPress={[Function]}
                  style={
                    Array [
                      Object {
                        "textDecorationLine": "underline",
                      },
                    ]
                  }
                >
                  Conditions of Sale
                </Text>
              </Text>
            </View>
          </View>
          <View
            className="css-1kxrbkv"
            style={
              Array [
                Object {},
              ]
            }
          >
            <View
              height={50}
              style={
                Array [
                  Object {
                    "height": 50,
                  },
                ]
              }
            >
              <View
                accessible={true}
                isTVSelectable={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(229, 229, 229, 1)",
                    "borderRadius": 2,
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={null}
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 14,
                        },
                        Object {
                          "color": "white",
                          "opacity": 1,
                        },
                        Object {
                          "fontFamily": "Unica77LL-Medium",
                        },
                      ]
                    }
                  >
                    Complete registration
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTNavItem>
  </RCTNavigator>
</View>
`;

exports[`renders properly without credit card 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTNavigator
    onNavigationComplete={[Function]}
    requestedTopOfStack={0}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTNavItem
      initialRoute={
        Object {
          "component": [Function],
          "passProps": Object {
            "me": Object {
              "has_credit_cards": false,
            },
            "sale": Object {
              "__id": "U2FsZTpkYXZpZC1seW5jaC1mb3VuZGF0aW9uLWJlbmVmaXQtYXVjdGlvbi0yMDE4",
              "end_at": "2018-06-26T19:30:00+00:00",
              "id": "david-lynch-foundation-benefit-auction-2018",
              "is_preview": false,
              "live_start_at": null,
              "name": "David Lynch Foundation: Benefit Auction 2018",
              "start_at": "2018-06-12T08:10:00+00:00",
            },
          },
          "title": "",
        }
      }
      navigationBarHidden={true}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
          undefined,
        ]
      }
      title=""
      translucent={true}
    >
      <View
        className="css-6fsl11-Container"
        style={
          Array [
            Object {},
          ]
        }
      >
        <View>
          <View
            className="css-zcxndt"
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              className="css-6bw7z5-Title sc-bwzfXH uTxCW"
              fontFamily="AGaramondPro-Semibold"
              fontSize="22px"
              lineHeight="28px"
              style={
                Array [
                  Object {
                    "fontFamily": "AGaramondPro-Semibold",
                    "fontSize": 22,
                    "lineHeight": 28,
                  },
                ]
              }
            >
              Register to bid
            </Text>
            <View
              className="css-1q6ogye-Countdown"
              style={
                Array [
                  Object {
                    "display": "flex",
                  },
                ]
              }
            >
              <Text
                className="sc-bdVaJa bDWFJH"
                fontFamily="Unica77LL-Medium"
                fontSize="16px"
                lineHeight="22px"
                style={
                  Array [
                    Object {
                      "fontFamily": "Unica77LL-Medium",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                  ]
                }
              >
                15d  23h  07m  27s
              </Text>
              <Text
                className="sc-bdVaJa bDWFJH"
                fontFamily="Unica77LL-Medium"
                fontSize="12px"
                lineHeight="16px"
                style={
                  Array [
                    Object {
                      "fontFamily": "Unica77LL-Medium",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Ends Jun 26, 3:30 PM
              </Text>
            </View>
            <Text
              className="css-11fydvi sc-bwzfXH uTxCW"
              fontFamily="AGaramondPro-Semibold"
              fontSize="18px"
              lineHeight="22px"
              style={
                Array [
                  Object {
                    "fontFamily": "AGaramondPro-Semibold",
                    "fontSize": 18,
                    "lineHeight": 22,
                  },
                ]
              }
            >
              David Lynch Foundation: Benefit Auction 2018
            </Text>
          </View>
          <View>
            <View
              className="css-1fhh0y8-Divider"
              style={
                Array [
                  Object {},
                ]
              }
            />
            <View
              accessible={true}
              className="css-865zlg-Row"
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
            >
              <View
                className="css-8utqyx-Col"
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  className="sc-bwzfXH uTxCW"
                  fontFamily="AGaramondPro-Semibold"
                  fontSize="16px"
                  lineHeight="24px"
                  style={
                    Array [
                      Object {
                        "fontFamily": "AGaramondPro-Semibold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      },
                    ]
                  }
                >
                  Credit card
                </Text>
              </View>
              <View
                className="css-nzb7am-Col"
                style={
                  Array [
                    Object {},
                  ]
                }
              />
              <View
                className="css-84s8hb-Col"
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  className="css-8owuzh sc-bdVaJa bDWFJH"
                  fontFamily="Unica77LL-Regular"
                  fontSize="12px"
                  lineHeight="16px"
                  style={
                    Array [
                      Object {
                        "fontFamily": "Unica77LL-Regular",
                        "fontSize": 12,
                        "lineHeight": 16,
                      },
                    ]
                  }
                >
                  Add
                </Text>
              </View>
            </View>
            <View
              className="css-1fhh0y8-Divider"
              style={
                Array [
                  Object {},
                ]
              }
            />
            <View
              accessible={true}
              className="css-865zlg-Row"
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {},
                ]
              }
            >
              <View
                className="css-8utqyx-Col"
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  className="sc-bwzfXH uTxCW"
                  fontFamily="AGaramondPro-Semibold"
                  fontSize="16px"
                  lineHeight="24px"
                  style={
                    Array [
                      Object {
                        "fontFamily": "AGaramondPro-Semibold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      },
                    ]
                  }
                >
                  Billing address
                </Text>
              </View>
              <View
                className="css-nzb7am-Col"
                style={
                  Array [
                    Object {},
                  ]
                }
              />
              <View
                className="css-84s8hb-Col"
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  className="css-8owuzh sc-bdVaJa bDWFJH"
                  fontFamily="Unica77LL-Regular"
                  fontSize="12px"
                  lineHeight="16px"
                  style={
                    Array [
                      Object {
                        "fontFamily": "Unica77LL-Regular",
                        "fontSize": 12,
                        "lineHeight": 16,
                      },
                    ]
                  }
                >
                  Add
                </Text>
              </View>
            </View>
            <View
              className="css-1fhh0y8-Divider"
              style={
                Array [
                  Object {},
                ]
              }
            />
          </View>
          <View
            style={
              Object {
                "marginTop": 22,
              }
            }
          >
            <Modal
              animationType="fade"
              hardwareAccelerated={false}
              transparent={true}
              visible={false}
            >
              <View
                accessible={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#00000099",
                      "flexBasis": 0,
                      "flexDirection": "column",
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  accessible={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "white",
                        "borderRadius": 2,
                        "opacity": 1,
                        "paddingBottom": 20,
                        "paddingLeft": 20,
                        "paddingRight": 20,
                        "paddingTop": 20,
                        "width": 300,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      className="sc-bdVaJa bDWFJH"
                      fontFamily="Unica77LL-Medium"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "fontFamily": "Unica77LL-Medium",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      An error occurred
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "paddingBottom": 30,
                      }
                    }
                  >
                    <Text
                      className="css-1e758l9 sc-bdVaJa bDWFJH"
                      fontFamily="Unica77LL-Regular"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "fontFamily": "Unica77LL-Regular",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                  <View
                    accessible={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(255, 255, 255, 1)",
                        "borderColor": "rgba(229, 229, 229, 1)",
                        "borderRadius": 2,
                        "borderWidth": 2,
                        "height": 40,
                        "justifyContent": "center",
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      className="css-1xu3tth sc-bdVaJa bDWFJH"
                      fontFamily="Unica77LL-Medium"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "fontFamily": "Unica77LL-Medium",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      Ok
                    </Text>
                  </View>
                </View>
              </View>
            </Modal>
          </View>
        </View>
        <View>
          <View
            accessible={true}
            className="css-t14co2"
            onPress={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {},
              ]
            }
          >
            <View
              animate={
                Array [
                  "backgroundColor",
                  "borderColor",
                ]
              }
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255, 255, 255, 1)",
                  "borderColor": "rgba(229, 229, 229, 1)",
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "display": "flex",
                  "height": 20,
                  "justifyContent": "center",
                  "marginRight": 10,
                  "width": 20,
                }
              }
            />
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                className="css-ioktyf sc-bwzfXH uTxCW"
                fontFamily="AGaramondPro-Regular"
                fontSize="14px"
                lineHeight="18px"
                style={
                  Array [
                    Object {
                      "fontFamily": "AGaramondPro-Regular",
                      "fontSize": 14,
                      "lineHeight": 18,
                    },
                  ]
                }
              >
                Agree to
                 
                <Text
                  onPress={[Function]}
                  style={
                    Array [
                      Object {
                        "textDecorationLine": "underline",
                      },
                    ]
                  }
                >
                  Conditions of Sale
                </Text>
              </Text>
            </View>
          </View>
          <View
            className="css-1kxrbkv"
            style={
              Array [
                Object {},
              ]
            }
          >
            <View
              height={50}
              style={
                Array [
                  Object {
                    "height": 50,
                  },
                ]
              }
            >
              <View
                accessible={true}
                isTVSelectable={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(229, 229, 229, 1)",
                    "borderRadius": 2,
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={null}
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 14,
                        },
                        Object {
                          "color": "white",
                          "opacity": 1,
                        },
                        Object {
                          "fontFamily": "Unica77LL-Medium",
                        },
                      ]
                    }
                  >
                    Complete registration
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTNavItem>
  </RCTNavigator>
</View>
`;
